moved semantic graph construction to graphbuilder
also fixed pyproject.toml, added plot png download, refactored example semantic_graph.py code, and created unit test file for KG construction

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ keywords = [
     "ontonotes",
     "wordnet",
     "corpus",
-    "semantic-analysis"
+    "semantic-analysis",
     "matplotlib",
     "plotly",
     "networkx"
